--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,38 +1,12 @@
 version: '2'
-services:
-  cassandra:
-    image: docker.io/bitnami/cassandra:3-debian-10
-    ports:
-      - 7000:7000
-      - 9042:9042
+services:      
+  portainer:
+    image: portainer/portainer
     volumes:
-      - cassandra_data:/bitnami
-    environment:
-      - CASSANDRA_SEEDS=cassandra,cassandra2
-      - CASSANDRA_CLUSTER_NAME=cassandra-cluster
-      - CASSANDRA_PASSWORD_SEEDER=yes
-      - CASSANDRA_PASSWORD=cassandra
-      # By default, Cassandra autodetects the available host memory and takes as much as it can.
-      # Therefore, memory options are mandatory if multiple Cassandras are launched in the same node.
-      - MAX_HEAP_SIZE=2G
-      - HEAP_NEWSIZE=200M
-  cassandra2:
-    image: docker.io/bitnami/cassandra:3-debian-10
+      - /var/run/docker.sock:/var/run/docker.sock
+      - ./portainer-data:/data
+        # Enable you to access potainers web interface from your host machine
+        # using http://localhost:10001
     ports:
-      - 7001:7000
-      - 9043:9042
-    volumes:
-      - cassandra2_data:/bitnami
-    environment:
-      - CASSANDRA_SEEDS=cassandra,cassandra2
-      - CASSANDRA_CLUSTER_NAME=cassandra-cluster
-      - CASSANDRA_PASSWORD=cassandra
-      # By default, Cassandra autodetects the available host memory and takes as much as it can.
-      # Therefore, memory options are mandatory if multiple Cassandras are launched in the same node.
-      - MAX_HEAP_SIZE=2G
-      - HEAP_NEWSIZE=200M
-volumes:
-  cassandra_data:
-    driver: local
-  cassandra2_data:
-    driver: local
+      - "10001:9000"
+ 
