--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     volumes:
       - cassandra_data:/bitnami
     environment:
-      - CASSANDRA_SEEDS=cassandra,cassandra2
+      - CASSANDRA_SEEDS=cassandra,cassandra2,CDC2_cassandra
       - CASSANDRA_CLUSTER_NAME=cassandra-cluster
       - CASSANDRA_PASSWORD_SEEDER=yes
       - CASSANDRA_PASSWORD=cassandra
@@ -32,15 +32,15 @@ services:
       - MAX_HEAP_SIZE=2G
       - HEAP_NEWSIZE=200M
       # A web based interface for managing your docker containers.
- 
- jupyter_all_spark:
+      
+  jupyter_all_spark:
     image: jupyter/all-spark-notebook
     volumes:
       - "$PWD":/jupyter-work:/work
         # Enable you to access potainers web interface from your host machine
         # using http://localhost:8888
     ports:
-      - "8889:8888"
+      - "8889:8888"   
       
 volumes:
   cassandra_data:
