--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,6 +51,8 @@ services:
       # Therefore, memory options are mandatory if multiple Cassandras are launched in the same node.
       - MAX_HEAP_SIZE=2G
       - HEAP_NEWSIZE=200M
+    networks:
+      - elk
   cassandra2:
     image: docker.io/bitnami/cassandra:3-debian-10
     ports:
@@ -67,12 +69,14 @@ services:
       - MAX_HEAP_SIZE=2G
       - HEAP_NEWSIZE=200M
       # A web based interface for managing your docker containers.
-     
+    networks:
+      - elk   
   jupyter_all_spark:
     image: jupyter/all-spark-notebook
     hostname: jupyter_all_spark
     container_name: jupyter_all_spark
- 
+    networks:
+      - elk 
     volumes:
       - /jupyter-work:/work
         # Enable you to access potainers web interface from your host machine
@@ -85,3 +89,7 @@ volumes:
     driver: local
   cassandra2_data:
     driver: local
+    
+networks:
+  elk:
+    driver: overlay
